# CppND-System-Monitor

./: CMakeLists.txt  Makefile  SOURCES  inst.sh  proc_stat  t.cpp  test.cpp
include/: linux_parser.h  process.h  processor.h  system.h
src/: format.cpp  linux_parser.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
